# rustio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
rustio-cli/: Cargo.toml  README.md
rustio-cli/src/: main.rs  wizard.rs
rustio-core/: Cargo.toml  README.md
rustio-core/assets/: admin.css  home.html
rustio-core/examples/: admin_demo.rs  homepage.rs  orm_demo.rs
rustio-core/src/: admin.rs  ai.rs  auth.rs  context.rs  defaults.rs  error.rs  http.rs  lib.rs  middleware.rs  migrations.rs  orm.rs  router.rs  schema.rs  server.rs
rustio-core/src/admin/: admin_intelligence_tests.rs  audit.rs  design.rs  entry_builder.rs  intelligence.rs  schema_cache.rs  suggestions.rs  suggestions_tests.rs
rustio-core/src/ai/: context_tests.rs  executor.rs  executor_tests.rs  executor_tests_advanced.rs  industry.rs  planner.rs  planner_tests.rs  review.rs  review_tests.rs
rustio-core/tests/: login_flow.rs
rustio-macros/: Cargo.toml  README.md
rustio-macros/src/: lib.rs
x/: .gitignore  Cargo.toml  README.md  main.rs
x/apps/: mod.rs
x/apps/posts/: admin.rs  mod.rs  models.rs  views.rs
x/migrations/: 0001_create_posts.sql
