[workspace]
resolver = "2"
members = [
    "rustio-core",
    "rustio-cli",
    "rustio-macros",
]

[workspace.package]
version = "0.1.2"
authors = ["Abdulwahed Mansour"]
edition = "2021"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/rustio"
rust-version = "1.75"
keywords = ["web", "framework", "admin", "orm", "sqlite"]
categories = ["web-programming::http-server"]
