[workspace]
resolver = "2"
members = [
    "rustio-core",
    "rustio-cli",
    "rustio-macros",
]

[workspace.package]
version = "0.3.0"
authors = ["Abdulwahed Mansour <abdulwahed.sweden@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/rustio"
homepage = "https://github.com/abdulwahed-sweden/rustio"
rust-version = "1.75"
keywords = ["web", "framework", "admin", "orm", "sqlite"]
categories = ["web-programming::http-server"]
