[package]
name = "rustio-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Developer CLI for RustIO: scaffold projects and apps, run migrations, launch the dev server."

[[bin]]
name = "rustio"
path = "src/main.rs"

[dependencies]
rustio-core = { path = "../rustio-core", version = "0.2.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
