[package]
name = "rustio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Runtime core for RustIO: HTTP server, router, middleware, ORM, admin, and migrations."

[dependencies]
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustio-macros = { path = "../rustio-macros", version = "0.3.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
