[package]
name = "rustio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Runtime core for RustIO: HTTP server, router, middleware, ORM, admin, and migrations."

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash", "rand"] }
bytes = "1"
# For OS-backed CSPRNG (salts + session tokens). rand 0.8 lines up with
# the rand_core 0.6 that argon2 0.5's `rand` feature pulls in.
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustio-macros = { path = "../rustio-macros", version = "0.3.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
